syntax = "proto3";
package DouDizhu;

option go_package = "network/protodef";
option csharp_namespace = "Network.Proto";

message PVector3 {
    float x = 1;
    float y = 2;
    float z = 3;
}

message PCharacterState {
    int64 timestamp = 1;
    PVector3 pos = 2;
}

message PCharacterStateList {
    repeated PCharacterState states = 1;
}

message PWorldState {
    map<string, PCharacterStateList> characters = 1;
}

message PEnterWorldRequest {
    string worldId = 1;
}

message PEnterWorldResponse {
    PWorldState worldState = 1;
}

message PCharacterMove {
    string characterId = 1;
    int64 timestamp = 2;

    PVector3 move = 3;
}